# HumAlg

./: CMakeLists.txt  HumAlg_lib.cpp  HumAlg_lib.h  HumAlg_main.cpp  README.md
test/: HumAlg_test.cpp
